# frommel

./: LICENSE  README  README.md  configure.in
doc/: bindery.txt  thanks.txt  trustee.txt
examples/: netware_mysql.sql
include/: console.h  gasp.h  ncp.h
releases/: frommel.tar.bz2
src/: AUTHORS  COPYING  Makefile.am  Makefile.in  configure
src/console/: Makefile.am  Makefile.in
src/doc/: calls.txt  conserv.txt
src/examples/: frommel.conf  netware_pgsql.sql
src/include/: bindery.h  config.h  conn.h  defs.h.in  frommel.h  fs.h  link.h  misc.h  net.h  rconsole.h  sap.h  trustee.h  volume.h  wdog.h  web.h
src/lib/: Makefile.am  Makefile.in  gasp_client.c  misc.c
src/server/: Makefile.in  bindery.c  binderyio_mysql.c  link.c  main.c  ncp.c  ncp_23.c  ncp_34.c  ncp_87.c  net_linux.c  sap.c
src/src/console/: console.c
src/src/lib/: config.c  crypt.c  net.c  volume.c
src/src/server/: Makefile.am  binderyio.c  binderyio_pgsql.c  conn.c  fconsole.c  fs.c  gasp_server.c  ncp.c  ncp_21.c  ncp_22.c  rconsole.c  rconsoled.c  trustee.c  wdog.c  web.c
src/web/: header.html  overview.html  send_conn_msg.html  vol_dismount.html  vol_entry.html
web/: clear_conn.html  conn.html  conn_entry.html  footer.html  send_msg.html  volume.html
